--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -1,9 +1,13 @@
 annotated-types==0.7.0
+anyio==4.6.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+distro==1.9.0
+exceptiongroup==1.2.2
 Flask==3.0.3
 Flask-Cors==5.0.0
 google-ai-generativelanguage==0.6.10
@@ -16,12 +20,18 @@ googleapis-common-protos==1.65.0
 grpcio==1.66.2
 grpcio-status==1.66.2
 gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.5
 httplib2==0.22.0
+httpx==0.27.2
 idna==3.10
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jiter==0.5.0
+jsonify==0.5
 MarkupSafe==2.1.5
+openai==1.50.2
 packaging==24.1
 proto-plus==1.24.0
 protobuf==5.28.2
@@ -32,6 +42,8 @@ pydantic_core==2.23.4
 pyparsing==3.1.4
 requests==2.32.3
 rsa==4.9
+sniffio==1.3.1
+soupsieve==2.6
 tqdm==4.66.5
 typing_extensions==4.12.2
 uritemplate==4.1.1
